force-app/main/default/objects/Data_Masking_Config__mdt/Data_Masking_Config__mdt.object-meta.xml
<CustomObject>
    <label>Data Masking Config</label>
    <pluralLabel>Data Masking Configs</pluralLabel>
</CustomObject>