force-app/main/default/objects/Data_Masking_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://github.com/amworkspace/am-sandbox-data-masking</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>