force-app/main/default/objects/Data_Masking_Config__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>https://github.com/amworkspace/am-sandbox-data-masking</description>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>