force-app/main/default/objects/Data_Masking_Config__mdt/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <description>https://github.com/amworkspace/am-sandbox-data-masking</description>
    <label>Field API</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>