force-app/main/default/objects/Data_Masking_Config__mdt/fields/Masking_Rule__c.field-meta.xml
<CustomField>
    <fullName>Masking_Rule__c</fullName>
    <description>https://github.com/amworkspace/am-sandbox-data-masking</description>
    <label>Masking Rule</label>
    <type>TextArea</type>
</CustomField>