force-app/main/default/objects/Data_Masking_Config__mdt/fields/Masking_Type__c.field-meta.xml
<CustomField>
    <fullName>Masking_Type__c</fullName>
    <description>https://github.com/amworkspace/am-sandbox-data-masking</description>
    <label>Masking Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>