force-app/main/default/objects/Data_Masking_Config__mdt/listViews/All_Data_Masking_Configs.listView-meta.xml
<ListView>
    <fullName>All_Data_Masking_Configs</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_API__c</columns>
    <columns>Field_API__c</columns>
    <columns>Masking_Type__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data Masking Configs</label>
</ListView>